Add Test Cases for Filter Parser